src/pythonj/PythonJParser.java
// $ANTLR 3.5 C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g 2014-03-21 18:24:37

  package pythonj;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class PythonJParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Comment", "DEDENT", "EOL", "EXP", 
		"ID", "INDENT", "INT", "NUMBER", "STATEMENTS", "STRING", "Skip", "Spaces", 
		"'!='", "'%'", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "':'", "'<'", 
		"'<='", "'='", "'=='", "'>'", "'>='", "'and'", "'contains'", "'elif'", 
		"'else'", "'for'", "'if'", "'in'", "'or'", "'print'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int Comment=4;
	public static final int DEDENT=5;
	public static final int EOL=6;
	public static final int EXP=7;
	public static final int ID=8;
	public static final int INDENT=9;
	public static final int INT=10;
	public static final int NUMBER=11;
	public static final int STATEMENTS=12;
	public static final int STRING=13;
	public static final int Skip=14;
	public static final int Spaces=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PythonJParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PythonJParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return PythonJParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:60:1: prog : ( EOL )* block ;
	public final PythonJParser.prog_return prog() throws RecognitionException {
		PythonJParser.prog_return retval = new PythonJParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOL1=null;
		ParserRuleReturnScope block2 =null;

		Object EOL1_tree=null;

		try {
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:60:7: ( ( EOL )* block )
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:60:9: ( EOL )* block
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:60:9: ( EOL )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==EOL) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:60:9: EOL
					{
					EOL1=(Token)match(input,EOL,FOLLOW_EOL_in_prog182); 
					EOL1_tree = (Object)adaptor.create(EOL1);
					adaptor.addChild(root_0, EOL1_tree);

					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_block_in_prog185);
			block2=block();
			state._fsp--;

			adaptor.addChild(root_0, block2.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class block_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "block"
	// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:62:1: block : ( stat )* ;
	public final PythonJParser.block_return block() throws RecognitionException {
		PythonJParser.block_return retval = new PythonJParser.block_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope stat3 =null;


		try {
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:62:7: ( ( stat )* )
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:62:9: ( stat )*
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:62:9: ( stat )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ID||(LA2_0 >= INT && LA2_0 <= NUMBER)||LA2_0==STRING||LA2_0==18||(LA2_0 >= 35 && LA2_0 <= 36)||(LA2_0 >= 39 && LA2_0 <= 40)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:62:9: stat
					{
					pushFollow(FOLLOW_stat_in_block193);
					stat3=stat();
					state._fsp--;

					adaptor.addChild(root_0, stat3.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stat"
	// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:65:1: stat : ( expr EOL | ID '=' expr EOL | for_stmt | if_stmt | while_stmt );
	public final PythonJParser.stat_return stat() throws RecognitionException {
		PythonJParser.stat_return retval = new PythonJParser.stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOL5=null;
		Token ID6=null;
		Token char_literal7=null;
		Token EOL9=null;
		ParserRuleReturnScope expr4 =null;
		ParserRuleReturnScope expr8 =null;
		ParserRuleReturnScope for_stmt10 =null;
		ParserRuleReturnScope if_stmt11 =null;
		ParserRuleReturnScope while_stmt12 =null;

		Object EOL5_tree=null;
		Object ID6_tree=null;
		Object char_literal7_tree=null;
		Object EOL9_tree=null;

		try {
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:65:7: ( expr EOL | ID '=' expr EOL | for_stmt | if_stmt | while_stmt )
			int alt3=5;
			switch ( input.LA(1) ) {
			case INT:
			case NUMBER:
			case STRING:
			case 18:
			case 39:
				{
				alt3=1;
				}
				break;
			case ID:
				{
				int LA3_2 = input.LA(2);
				if ( (LA3_2==27) ) {
					alt3=2;
				}
				else if ( (LA3_2==EOL||(LA3_2 >= 16 && LA3_2 <= 17)||(LA3_2 >= 20 && LA3_2 <= 23)||(LA3_2 >= 25 && LA3_2 <= 26)||(LA3_2 >= 28 && LA3_2 <= 32)||LA3_2==38) ) {
					alt3=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 35:
				{
				alt3=3;
				}
				break;
			case 36:
				{
				alt3=4;
				}
				break;
			case 40:
				{
				alt3=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:65:9: expr EOL
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expr_in_stat208);
					expr4=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr4.getTree());

					EOL5=(Token)match(input,EOL,FOLLOW_EOL_in_stat210); 
					EOL5_tree = (Object)adaptor.create(EOL5);
					adaptor.addChild(root_0, EOL5_tree);

					}
					break;
				case 2 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:66:5: ID '=' expr EOL
					{
					root_0 = (Object)adaptor.nil();


					ID6=(Token)match(input,ID,FOLLOW_ID_in_stat216); 
					ID6_tree = (Object)adaptor.create(ID6);
					adaptor.addChild(root_0, ID6_tree);

					char_literal7=(Token)match(input,27,FOLLOW_27_in_stat218); 
					char_literal7_tree = (Object)adaptor.create(char_literal7);
					adaptor.addChild(root_0, char_literal7_tree);

					pushFollow(FOLLOW_expr_in_stat220);
					expr8=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr8.getTree());

					EOL9=(Token)match(input,EOL,FOLLOW_EOL_in_stat222); 
					EOL9_tree = (Object)adaptor.create(EOL9);
					adaptor.addChild(root_0, EOL9_tree);

					}
					break;
				case 3 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:67:5: for_stmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_for_stmt_in_stat228);
					for_stmt10=for_stmt();
					state._fsp--;

					adaptor.addChild(root_0, for_stmt10.getTree());

					}
					break;
				case 4 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:68:5: if_stmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_if_stmt_in_stat235);
					if_stmt11=if_stmt();
					state._fsp--;

					adaptor.addChild(root_0, if_stmt11.getTree());

					}
					break;
				case 5 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:69:5: while_stmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_while_stmt_in_stat242);
					while_stmt12=while_stmt();
					state._fsp--;

					adaptor.addChild(root_0, while_stmt12.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stat"


	public static class for_stmt_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "for_stmt"
	// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:73:1: for_stmt : 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )* -> ^( 'for' ID expr block ) ;
	public final PythonJParser.for_stmt_return for_stmt() throws RecognitionException {
		PythonJParser.for_stmt_return retval = new PythonJParser.for_stmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token item=null;
		Token string_literal13=null;
		Token string_literal14=null;
		Token char_literal15=null;
		Token EOL16=null;
		Token INDENT17=null;
		Token DEDENT18=null;
		Token EOL19=null;
		ParserRuleReturnScope items =null;
		ParserRuleReturnScope actions =null;

		Object item_tree=null;
		Object string_literal13_tree=null;
		Object string_literal14_tree=null;
		Object char_literal15_tree=null;
		Object EOL16_tree=null;
		Object INDENT17_tree=null;
		Object DEDENT18_tree=null;
		Object EOL19_tree=null;
		RewriteRuleTokenStream stream_EOL=new RewriteRuleTokenStream(adaptor,"token EOL");
		RewriteRuleTokenStream stream_DEDENT=new RewriteRuleTokenStream(adaptor,"token DEDENT");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleTokenStream stream_INDENT=new RewriteRuleTokenStream(adaptor,"token INDENT");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:73:11: ( 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )* -> ^( 'for' ID expr block ) )
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:73:13: 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )*
			{
			string_literal13=(Token)match(input,35,FOLLOW_35_in_for_stmt256);  
			stream_35.add(string_literal13);

			item=(Token)match(input,ID,FOLLOW_ID_in_for_stmt260);  
			stream_ID.add(item);

			string_literal14=(Token)match(input,37,FOLLOW_37_in_for_stmt262);  
			stream_37.add(string_literal14);

			pushFollow(FOLLOW_expr_in_for_stmt266);
			items=expr();
			state._fsp--;

			stream_expr.add(items.getTree());
			char_literal15=(Token)match(input,24,FOLLOW_24_in_for_stmt268);  
			stream_24.add(char_literal15);

			EOL16=(Token)match(input,EOL,FOLLOW_EOL_in_for_stmt270);  
			stream_EOL.add(EOL16);

			INDENT17=(Token)match(input,INDENT,FOLLOW_INDENT_in_for_stmt272);  
			stream_INDENT.add(INDENT17);

			pushFollow(FOLLOW_block_in_for_stmt276);
			actions=block();
			state._fsp--;

			stream_block.add(actions.getTree());
			DEDENT18=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_for_stmt278);  
			stream_DEDENT.add(DEDENT18);

			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:73:79: ( EOL )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==EOL) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:73:79: EOL
					{
					EOL19=(Token)match(input,EOL,FOLLOW_EOL_in_for_stmt280);  
					stream_EOL.add(EOL19);

					}
					break;

				default :
					break loop4;
				}
			}

			// AST REWRITE
			// elements: ID, block, expr, 35
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 74:3: -> ^( 'for' ID expr block )
			{
				// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:74:4: ^( 'for' ID expr block )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_35.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_1, stream_block.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "for_stmt"


	public static class if_stmt_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "if_stmt"
	// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:1: if_stmt : 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )? ;
	public final PythonJParser.if_stmt_return if_stmt() throws RecognitionException {
		PythonJParser.if_stmt_return retval = new PythonJParser.if_stmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal20=null;
		Token char_literal22=null;
		Token EOL23=null;
		Token INDENT24=null;
		Token DEDENT26=null;
		Token EOL27=null;
		Token string_literal28=null;
		Token char_literal30=null;
		Token EOL31=null;
		Token INDENT32=null;
		Token DEDENT34=null;
		Token EOL35=null;
		Token string_literal36=null;
		Token char_literal37=null;
		Token EOL38=null;
		Token INDENT39=null;
		Token DEDENT41=null;
		Token EOL42=null;
		ParserRuleReturnScope expr21 =null;
		ParserRuleReturnScope block25 =null;
		ParserRuleReturnScope expr29 =null;
		ParserRuleReturnScope block33 =null;
		ParserRuleReturnScope block40 =null;

		Object string_literal20_tree=null;
		Object char_literal22_tree=null;
		Object EOL23_tree=null;
		Object INDENT24_tree=null;
		Object DEDENT26_tree=null;
		Object EOL27_tree=null;
		Object string_literal28_tree=null;
		Object char_literal30_tree=null;
		Object EOL31_tree=null;
		Object INDENT32_tree=null;
		Object DEDENT34_tree=null;
		Object EOL35_tree=null;
		Object string_literal36_tree=null;
		Object char_literal37_tree=null;
		Object EOL38_tree=null;
		Object INDENT39_tree=null;
		Object DEDENT41_tree=null;
		Object EOL42_tree=null;

		try {
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:9: ( 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )? )
			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:11: 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )?
			{
			root_0 = (Object)adaptor.nil();


			string_literal20=(Token)match(input,36,FOLLOW_36_in_if_stmt305); 
			string_literal20_tree = (Object)adaptor.create(string_literal20);
			adaptor.addChild(root_0, string_literal20_tree);

			pushFollow(FOLLOW_expr_in_if_stmt307);
			expr21=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr21.getTree());

			char_literal22=(Token)match(input,24,FOLLOW_24_in_if_stmt309); 
			char_literal22_tree = (Object)adaptor.create(char_literal22);
			adaptor.addChild(root_0, char_literal22_tree);

			EOL23=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt311); 
			EOL23_tree = (Object)adaptor.create(EOL23);
			adaptor.addChild(root_0, EOL23_tree);

			INDENT24=(Token)match(input,INDENT,FOLLOW_INDENT_in_if_stmt313); 
			INDENT24_tree = (Object)adaptor.create(INDENT24);
			adaptor.addChild(root_0, INDENT24_tree);

			pushFollow(FOLLOW_block_in_if_stmt315);
			block25=block();
			state._fsp--;

			adaptor.addChild(root_0, block25.getTree());

			DEDENT26=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_if_stmt317); 
			DEDENT26_tree = (Object)adaptor.create(DEDENT26);
			adaptor.addChild(root_0, DEDENT26_tree);

			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:49: ( EOL )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==EOL) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:49: EOL
					{
					EOL27=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt319); 
					EOL27_tree = (Object)adaptor.create(EOL27);
					adaptor.addChild(root_0, EOL27_tree);

					}
					break;

				default :
					break loop5;
				}
			}

			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:54: ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==33) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:55: 'elif' expr ':' EOL INDENT block DEDENT ( EOL )*
					{
					string_literal28=(Token)match(input,33,FOLLOW_33_in_if_stmt323); 
					string_literal28_tree = (Object)adaptor.create(string_literal28);
					adaptor.addChild(root_0, string_literal28_tree);

					pushFollow(FOLLOW_expr_in_if_stmt325);
					expr29=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr29.getTree());

					char_literal30=(Token)match(input,24,FOLLOW_24_in_if_stmt327); 
					char_literal30_tree = (Object)adaptor.create(char_literal30);
					adaptor.addChild(root_0, char_literal30_tree);

					EOL31=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt328); 
					EOL31_tree = (Object)adaptor.create(EOL31);
					adaptor.addChild(root_0, EOL31_tree);

					INDENT32=(Token)match(input,INDENT,FOLLOW_INDENT_in_if_stmt330); 
					INDENT32_tree = (Object)adaptor.create(INDENT32);
					adaptor.addChild(root_0, INDENT32_tree);

					pushFollow(FOLLOW_block_in_if_stmt332);
					block33=block();
					state._fsp--;

					adaptor.addChild(root_0, block33.getTree());

					DEDENT34=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_if_stmt334); 
					DEDENT34_tree = (Object)adaptor.create(DEDENT34);
					adaptor.addChild(root_0, DEDENT34_tree);

					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:94: ( EOL )*
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==EOL) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:94: EOL
							{
							EOL35=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt336); 
							EOL35_tree = (Object)adaptor.create(EOL35);
							adaptor.addChild(root_0, EOL35_tree);

							}
							break;

						default :
							break loop6;
						}
					}

					}
					break;

				default :
					break loop7;
				}
			}

			// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:101: ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==34) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:102: 'else' ':' EOL INDENT block DEDENT ( EOL )*
					{
					string_literal36=(Token)match(input,34,FOLLOW_34_in_if_stmt342); 
					string_literal36_tree = (Object)adaptor.create(string_literal36);
					adaptor.addChild(root_0, string_literal36_tree);

					char_literal37=(Token)match(input,24,FOLLOW_24_in_if_stmt344); 
					char_literal37_tree = (Object)adaptor.create(char_literal37);
					adaptor.addChild(root_0, char_literal37_tree);

					EOL38=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt346); 
					EOL38_tree = (Object)adaptor.create(EOL38);
					adaptor.addChild(root_0, EOL38_tree);

					INDENT39=(Token)match(input,INDENT,FOLLOW_INDENT_in_if_stmt348); 
					INDENT39_tree = (Object)adaptor.create(INDENT39);
					adaptor.addChild(root_0, INDENT39_tree);

					pushFollow(FOLLOW_block_in_if_stmt350);
					block40=block();
					state._fsp--;

					adaptor.addChild(root_0, block40.getTree());

					DEDENT41=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_if_stmt352); 
					DEDENT41_tree = (Object)adaptor.create(DEDENT41);
					adaptor.addChild(root_0, DEDENT41_tree);

					// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:137: ( EOL )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==EOL) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// C:\\Users\\Jangedoo\\Documents\\GitHub\\PythonScriptingLanguage\\src\\pythonj\\PythonJ.g:77:137: EOL
							{
							EOL42=(Token)match(input,EOL,FOLLOW_EOL_in_if_stmt354); 
							EOL42_tree = (Object)adaptor.create(EOL42);
							adaptor.addChild(root_0, EOL42_tree);

							}
							break;

						default :
							break loop8;
						}
					}

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
